# k8s

./: Dockerfile  README.md  index.py  pyproject.toml
k8s/: api-deployment.json  api-service.json  deployment.json  service.json
